--- a/server/.env
+++ b/server/.env
@@ -9,5 +9,7 @@ DATABASE_DB=pta-one-page
 NODE_ENV=dev
 PORT=3001
 
-
+EMAIL=emailteste199x@gmail.com
+PASSWORD=vnegjanibzuyulth
+EMAIL_WILL_RECEIVE=giulyanofelipesantos@gmail.com
 
